--- a/README.rdoc
+++ b/README.rdoc
@@ -21,7 +21,7 @@ Things you may want to cover:
 
 * Deployment instructions
 
-* ...
+* I am adding text to make changes
 
 
 Please feel free to use a different markup language if you do not plan to run
